welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:10: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:27: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:44: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:61: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:78: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:95: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:112: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:129: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:146: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:163: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^Balin:180: error: not found: value estsurBiscuit
	while(!estsurBiscuit())
               ^