welcome.lessons.welcome.loopwhile.WhileMoria.scala.code
while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()

while(!estSurBiscuit())
{
	recule()
}

if(estSurBiscuit())
{
	prendBiscuit()
	while(!estsurBiscuit())
	{
		avance()
	}
	recule()
	poseBiscuit()
}
recule()
